# tablecloth

./: .gdb_history  .gitignore  .gitmodules  .local.kak  CMakeLists.txt  README.md  meson.build  rootston.ini  run.sh  tablecloth.ini  test.h
cloth-bar/: bar.cpp  bar.hpp  client.cpp  client.hpp  main.cpp  meson.build  test.cpp
cloth-bar/resources/: style.css
cloth-bar/widgets/: battery.hpp  status-icons.cpp  status-icons.hpp
cloth-kbd/: client.cpp  client.hpp  keyboard.cpp  keyboard.hpp  keymap_data.hpp  layouts.hpp  main.cpp  meson.build
cloth-kbd/resources/: style.css
cloth-lock/: bar.hpp  client.cpp  client.hpp  lock.cpp  lock.hpp  main.cpp  meson.build
cloth-lock/resources/: style.css
cloth-msg/: main.cpp  meson.build
cloth-notifications/: client.cpp  client.hpp  main.cpp  meson.build  notification-server.cpp  notification-server.hpp
cloth-notifications/resources/: style.css
cloth-outputs/: client.cpp  client.hpp  main.cpp  meson.build  output.cpp  output.hpp
cloth-outputs/widgets/: outputs.cpp  outputs.hpp
common/: gdkwayland.hpp  meson.build  wayland.hpp
common/util/: algorithm.hpp  chrono.hpp  exception.hpp  logging.hpp  macros.hpp  ptr_vec.hpp
protocol/: dbus-menu.xml  dbus-notifications.xml  dbus-properties.xml  dbus-status-notifier-item.xml  dbus-status-notifier-watcher.xml  tablecloth-shell.xml  workspaces.xml
src/: CMakeLists.txt  config.cpp  config.hpp  cursor.cpp  cursor.hpp  desktop.cpp  desktop.hpp  gdkwayland.hpp  input.cpp  input.hpp  keyboard.cpp  keyboard.hpp  layer_shell.cpp  layers.hpp  main.cpp  output.cpp  output.hpp  seat.cpp  seat.hpp  server.cpp  server.hpp  shell.cpp  swc.cpp  swc.hpp  view.cpp  view.hpp  wayland.hpp  weston.hpp  wl_shell.cpp  wlroots.hpp  workspace.cpp  workspace.hpp  xcursor.hpp  xdg_shell.cpp  xdg_shell_v6.cpp  xwayland.cpp
src/util/: algorithm.hpp  bindings.hpp  chrono.hpp  iterators.hpp  logging.hpp  ptr_vec.hpp
subprojects/: .gitignore  range-v3.wrap
tablecloth/: config.cpp  config.hpp  cursor.cpp  cursor.hpp  decoration.cpp  decoration.hpp  desktop.cpp  desktop.hpp  gdkwayland.hpp  gesture.hpp  input.cpp  input.hpp  keyboard.cpp  keyboard.hpp  layer_shell.cpp  layers.hpp  main.cpp  meson.build  output.cpp  output.hpp  render.cpp  render.hpp  render_utils.cpp  render_utils.hpp  seat.cpp  seat.hpp  server.cpp  server.hpp  tablet.cpp  text_input.cpp  text_input.hpp  view.cpp  view.hpp  wl_shell.cpp  wlroots.hpp  workspace.cpp  workspace.hpp  xdg_shell.cpp  xdg_shell_v6.cpp  xwayland.cpp
tablecloth/protocol/: window_manager.cpp  window_manager.hpp  workspace_manager.cpp  workspace_manager.hpp
